--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -93,6 +93,11 @@
 				<p><span>ANONYME, révolté de la colonne de fer
 					<br><i><a href="https://drive.google.com/uc?id=1j-9yHGbOKhoSxWFRQaBuO14JX7TpVnEB" title="Pdf">
 					<u>Protestation devant les libertaires du présent et du&#8239;futur&#8239;sur&#8239;les&#8239;capitulations&#8239;de&#8239;1937(.pdf)</i></u></a></span></p>
+					
+				<p><span>BELBEOCH, Roger
+					<br><i><a href="https://infokiosques.net/IMG/pdf/societe_nucleaire_-_cahier.pdf" title="Société nucléairepdf">
+					<u>Société nucléaire(.pdf)</i></u><span></p></a>			
+						
 				<p><span>BENJAMIN, Walter
 					<br><i><a href="https://drive.google.com/uc?id=1r2F2jvikgee2unAgEZHDNGbDRTajXIPX" title="BENJAMINPdf">
 					<u>L'oeuvre d'art à l'epoque de sa reproduction mécanisée(.pdf)</i></u><span></p></a>
