--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -219,6 +219,11 @@
 				<p><span>PANNEKOEK, Anton
 					<br><a href="https://drive.google.com/uc?id=1fiYMiYO4qmG7oaMvZ3LONZkzypq9X9ve" title="BarbariePdf">
 					<i><u>Lettre à Socialisme ou Barbarie(.pdf)</i></u></a><span></p>
+
+				<p><span>REICH, Wilhem
+					<br><a href="https://edenguard.fr/Docs%20NRJ%20Et%20Cie/Wilhelm%20Reich/EcoutePetitHomme.pdf" title="EcoutePdf">
+					<i><u>Ecoute petit homme !(.pdf)</i></u></a><span></p>
+						
 				<p><span>SANGUINETTI, Gianfranco (Censor)
 					<br><i><a href="https://drive.google.com/uc?id=1CTBmJjkAg0knpUVijwwwdNr-G14y-fpu" title="CensorPdf">
 					<u>Véridique Rapport sur les dernières chances de sauver le capitalisme en Italie(.pdf)</u></a></i></span></p>
