--- a/plagiat_ed_corpus.html
+++ b/plagiat_ed_corpus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Editions Plagiat corpus</title>
-<link rel="icon" type="image/png" href="https://drive.google.com/uc?id=11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
+<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
 <meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité." />
 <link rel="stylesheet" href="plagiat_ed_corpus.css" />
 </head>
