--- a/plagiat_ed_boutique_Morphoses.html
+++ b/plagiat_ed_boutique_Morphoses.html
@@ -3,27 +3,23 @@
 <head>
 <title>Plagiat Edition boutique</title>  
 <link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/d/11_JqLV3wsDoN5-96gJaSiUH8RTY8el4p" />
-<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Boutique : Dans le béton, de Mamoste dîn " />
+<meta name="description" content="Maison d’édition indépendante - bande dessinée, littérature, histoire, politique, actualité. Boutique : Morphoses, ouvrage collectif " />
 <link rel="stylesheet" href="plagiat_ed_boutique_Morphoses.css" />
 </head>
 <body>
-
 
     <div class="header">
 	    <table >
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				   <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
+				    <img src="https://lh3.googleusercontent.com/d/12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
 					
 	                <td width="900" height="175" id="entete">
-					<a id="boutique" rel="elephant">
-				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
-			</a>
-			<figcaption><span><cite></cite><span></figcaption>
+					<h1><span>Editions Plagiat<span></h1>
 			        </td>
 		    </tr>
 		</table >	
