--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -9,21 +9,19 @@
 <body>
 
 
+  
     <div class="header">
 	    <table >
             <tr>
 	                <td width="210" height="175" id="logo">
 			         <a id="logoHome" rel="start home" href="index.html">
-				   <img src="image_site/plagiat_editions.jpg" alt="Plagiat Editions"  />
+				    <img src="https://lh3.googleusercontent.com/d/12csgnz9UYRP9CzWY4R_uXR5coniG5K3h" alt="Plagiat Editions"  />
 			</a>   
 			        </td>
 				
 					
 	                <td width="900" height="175" id="entete">
-					<a id="boutique" rel="elephant">
-				<img src="image_site/entêteboutique.jpg" alt="Plagiat Editions entête" width="900" height="167" />
-			</a>
-			<figcaption><span><cite></cite><span></figcaption>
+					<h1><span>Editions Plagiat<span></h1>
 			        </td>
 		    </tr>
 		</table >	
