--- a/plagiat_ed_BD_dans_le_beton.html
+++ b/plagiat_ed_BD_dans_le_beton.html
@@ -75,11 +75,11 @@
 
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></h4>
 	  
-	  <br><cite id="resume"><span>Il est six heures. Alberto Conti se rend au travail, ses écouteurs plantés dans les oreilles comme tous les matins, 
+	  <br><p><i><span>Il est six heures. Alberto Conti se rend au travail, ses écouteurs plantés dans les oreilles comme tous les matins, 
 		  quand il se retrouve happé par une émission de radio 
 		  relatant un braquage mené par deux hommes en trottinette électrique. Un témoin raconte les événements
 incroyables qui se sont déroulés sous ses yeux et l’arrestation des différents protagonistes. Mais ce récit anecdotique, surprenant et burlesque prend une autre dimension
-quand Alberto arrive sur son lieu de travail où il découvre la disparition de deux de ses collègues. Dans le béton est une peinture de la vie quotidienne mêlant critique sociale et absurde.</cite><span>
+quand Alberto arrive sur son lieu de travail où il découvre la disparition de deux de ses collègues. Dans le béton est une peinture de la vie quotidienne mêlant critique sociale et absurde.</i></p><span>
             <br>
 	<br>
 		 <a id="partieune">
