--- a/plagiat_ed_BD.html
+++ b/plagiat_ed_BD.html
@@ -79,12 +79,11 @@
 			<br>Attention, nous vous conseillons de privilégier la lecture sur pdf. 
 				<br>Car bien qu'ils soient lourds, ceux-ci ne buggent pas, 
 				<br>contrairement aux images qui peuvent ne pas bien se charger sur le site.
-
-			<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
-				 <br><br><br>
+				<br>Seule la commande de livres imprimés est payante (Boutique).<span></caption>    
+				 <br>
 	
 				    <tr>
-	                <td width="225" id="imagesdesbd">
+	                <td width="225" id="imagesdesbd"><br>
 			            <a id="danslebetoncouv" rel="couverturemamostedin" href="plagiat_ed_BD_dans_le_beton.html">
 			            <img src="image_site/couvdanslebeton014.jpg" alt="Dans_le_beton/mamoste_din" width="180" height="auto" /></a>
 			        </td>
