--- a/plagiat_ed_BD_le_présischtroumpf_détournement.html
+++ b/plagiat_ed_BD_le_présischtroumpf_détournement.html
@@ -76,7 +76,7 @@
 				contrairement aux images qui peuvent ne pas bien se charger sur le site.
  
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></h4> 
-	  <br><cite id="resume"><span>
+	  <br><p><i><span>
 	  
 Le Présischtroumpf - détournement :
 
@@ -84,7 +84,7 @@ Le Présischtroumpf - détournement :
 	  l’élection d’un nouveau présischtroumpf n’a visiblement pas atténué la colère. 
 	  Au grand dam du nouveau maître de maison, 
 	  dont la bouille sympathique n’a pas tardé à laisser place au mépris et à l’autoritarisme. 
-	  Il se pourrait bien que cette mascarade électorale soit la dernière…"</cite><span>
+	  Il se pourrait bien que cette mascarade électorale soit la dernière…"</i></p></span>
             <br>
 	<br>
 		 <a id="partieune">
