--- a/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
+++ b/plagiat_ed_BD_ne_pas_mourir_comme_des_chiens.html
@@ -75,7 +75,7 @@
 
 			<br>Seule la commande de livres imprimés est payante (Boutique).<span></h4>
 	  
-	  <br><cite id="resume"><span>Les luttes se croisent et se ressemblent, comme celles des
+	  <br><p><span><i>Les luttes se croisent et se ressemblent, comme celles des
 Kurdes et des gilets jaunes. Le même combat pour la liberté
 et l'égalité sociale rencontre la même répression.
 La dessinatrice Mamoste Dîn nous fait découvrir le camp
@@ -84,7 +84,7 @@ va-et-vient entre la Grèce et la France, entre les histoires
 personnelles et les combats politiques des activistes kurdes
 et de la jeune Judith, venue documenter leur quotidien, nous
 partageons un moment de la vie du camp et apprenons à
-				connaître et à aimer ses habitants.</cite><span>
+				connaître et à aimer ses habitants.</i></p></span>
             <br>
 	<br>
 		 <a id="partieune">
