--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -76,7 +76,7 @@
 			<p><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.
 			<br>Lecture en ligne disponible selon le genre dans les différentes catégories du&#8239;Menu<span></p>   
-				<br><i><span>Les luttes se croisent et se ressemblent, comme celles des
+				<br><p><i><span>Les luttes se croisent et se ressemblent, comme celles des
 Kurdes et des gilets jaunes. Le même combat pour la liberté
 et l'égalité sociale rencontre la même répression.
 La dessinatrice Mamoste Dîn nous fait découvrir le camp
@@ -85,7 +85,7 @@ va-et-vient entre la Grèce et la France, entre les histoires
 personnelles et les combats politiques des activistes kurdes
 et de la jeune Judith, venue documenter leur quotidien, nous
 partageons un moment de la vie du camp et apprenons à
-				connaître et à aimer ses habitants.</i><span>
+				connaître et à aimer ses habitants.</i></p><span>
             <br>
 												<p><b><span>Lors du paiement en ligne, deux possibilités s'offriront à vous.
 							La première sera de payer grâce à votre compte Paypal.
