--- a/plagiat_ed_boutique_Morphoses.html
+++ b/plagiat_ed_boutique_Morphoses.html
@@ -72,8 +72,8 @@
 	<br>
 	<br>
 			<p><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
-			papier au format numérique disponible en libre accès sur notre site.<br> Néanmoins cette ouvrage collectif n'ayant pas été fait dans le même cadre 
-il ne sera pas disponible numériquement. Etant donné que cet ouvrage est le fruit d’un atelier de création mené
+			papier au format numérique disponible en libre accès sur notre site.<br>Cet ouvrage collectif n'ayant pas été fait dans le même cadre 
+il ne sera pas disponible numériquement. En effet cette bande dessinée est le fruit d’un atelier de création mené
 avec des patients et du personnel de santé du Centre de Réadaptation de Coubert et des usagers et du personnel de la Maison Départementale des Solidarités de
 Tournan-en-Brie : créée et animée par cinq artistes de la compagnie L’Esprit du Mardi, cette « Cartoon Factory » leur a permis de regarder leur vie de façon décalée,
 fantastique, philosophique, ou parfois avec les simples yeux de la lucidité — un acte à la fois artistique et thérapeutique. Soutenu par le Vaisseau, ce projet a eu lieu dans le cadre du dispositif national « Culture et Santé »,
