--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -106,11 +106,10 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
 					<span>de Mamoste Dîn
 					<br>Achevé d'imprimer à l'été 2023 en Italie</p>
 					<p><span><b>prix 12 euros</b>,  + 3,50 euros de frais de port<span></p>
-
 					<p><span>Editions Plagiat
 					<br>ISBN : 978-2-492221-05-7 <br>
-					Format A5, couverture cartonnée avec rabats<br>
-					100 pages couleurs<span></p>
+					Format A5, couverture cartonnée avec rabats 100 pages couleurs<br>
+					Poids : 180 gr<span></p>
 
 					<p><span>Type de paiement :<span></p>
 					<p style="color:purple"><span>Achat en ligne</b></p><span>
