--- a/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
+++ b/plagiat_ed_boutique_dans_le_beton_Mamoste_Din.html
@@ -84,9 +84,9 @@ quand Alberto arrive sur son lieu de travail où il découvre la disparition de 
             <br>
 												<p><b><span>Lors du paiement en ligne, deux possibilités s'offriront à vous.
 							La première sera de payer grâce à votre compte Paypal.
-							Sinon vous pourrez payer en ligne directement par carte bancaire, vous serez obligé de donner un mail.
-													C'est sur cet e-mail que sera envoyé la confirmation de votre achat. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement.</p></b><span>
+							Sinon vous pourrez payer en ligne directement par carte bancaire, et vous serez alors obligé de donner une adresse mail.
+													C'est là que sera envoyé la confirmation de votre achat. 
+							Ne vous inquiétez pas s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p></b><span>
  
 <table>
 			    <tr>
