--- a/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
+++ b/plagiat_ed_boutique_Ne_pas_mourir_comme_des_chiens_Mamoste_dîn.html
@@ -89,9 +89,9 @@ partageons un moment de la vie du camp et apprenons à
             <br>
 												<p><b><span>Lors du paiement en ligne, deux possibilités s'offriront à vous.
 							La première sera de payer grâce à votre compte Paypal.
-							Sinon vous pourrez payer en ligne directement par carte bancaire, vous serez obligé de donner un mail.
-													C'est sur cet e-mail que sera envoyé la confirmation de votre achat. 
-							Ne pas vous inquiéter s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement.</p></b><span>
+							Sinon vous pourrez payer en ligne directement par carte bancaire, et vous serez alors obligé de donner une adresse mail.
+													C'est là que sera envoyé la confirmation de votre achat. 
+							Ne vous inquiétez pas s'il y a un temps de latence, c'est normal. Nous vous garantissons son bon fonctionnement</p></b><span>
  
 <table>
 			    <tr>
@@ -114,8 +114,8 @@ partageons un moment de la vie du camp et apprenons à
 
 					<p><span>Editions Plagiat
 					<br>ISBN : 978-2-492221-01-9 <br>
-					Format A5, couverture cartonnée avec rabats<br>
-					104 pages couleurs<span></p>
+					Format A5, couverture cartonnée avec rabats 104 pages couleurs<br>
+					Poids : 227 gr <span></p>
 
 					<p><span>Type de paiement :<span></p>
 					<p style="color:purple"><span>Achat en ligne</b></p><span>
