--- a/plagiat_ed_boutique_Morphoses.html
+++ b/plagiat_ed_boutique_Morphoses.html
@@ -73,11 +73,11 @@
 	<br>
 			<p><span>La boutique existe pour les produits imprimés de nos éditions, pour celles et ceux qui préféreraient un format 
 			papier au format numérique disponible en libre accès sur notre site.<br>Cet ouvrage collectif n'ayant pas été fait dans le même cadre, 
-il ne sera pas disponible numériquement. En effet cette bande dessinée est le fruit d’un atelier de création mené
+il ne sera pas disponible gratuitement. En effet cette bande dessinée est le fruit d’un atelier de création mené
 avec des patients et du personnel de santé du Centre de Réadaptation de Coubert et des usagers et du personnel de la Maison Départementale des Solidarités de
-Tournan-en-Brie. Créée et animée par cinq artistes de la compagnie L’Esprit du Mardi, cette « Cartoon Factory » leur a permis de regarder leur vie de façon décalée,
-fantastique, philosophique, ou parfois avec les simples yeux de la lucidité — un acte à la fois artistique et thérapeutique. Soutenu par le Vaisseau ( qui est une fabrique artistique située au sein du Centre de
-Réadaptation de Coubert et gérée par la compagnie Vertical Détour), ce projet a eu lieu dans le cadre du dispositif national « Culture et Santé »,
+Tournan-en-Brie. Créée et animée par cinq artistes de la compagnie L’Esprit du Mardi, cette «&#8239;Cartoon Factory&#8239;» leur a permis de regarder leur vie de façon décalée,
+fantastique, philosophique, ou parfois avec les simples yeux de la lucidité —&#8239;un acte à la fois artistique et thérapeutique. Soutenu par le Vaisseau (qui est une fabrique artistique située au sein du Centre de
+Réadaptation de Coubert et gérée par la compagnie Vertical Détour), ce projet a eu lieu dans le cadre du dispositif national «&#8239;Culture et Santé&#8239;»,
 qui vise à promouvoir la culture dans le secteur médico-social.<span></p>   
 				<br><p><span><i>Lamine voudrait devenir un bipède et Claire un cow-boy nain, Freddie se rêve en dézingueur de serpents et Claude en conducteur de tapis volant, Florence dompte les chats
 et John-Ross les hyènes, tandis qu’Olivier ouvre des portes et que William fabrique des
