--- a/plagiat_ed_miscellanees_affiches.html
+++ b/plagiat_ed_miscellanees_affiches.html
@@ -74,19 +74,27 @@
 
 Affiches et gravures vues par-ci par-là...</p><span>
             <br>
-	<br>		 <a id="partieune">
+	<br>		 
+			 <a id="partieune">
+				<img src="image_site/samouraicasseurs.jpg" alt="" width="450" height="auto" />
+			</a> <br><br>
+	
+	<a id="partieune">
 				<img src="image_site/affichechiens.jpg" alt="" width="450" height="auto" />
 			</a> <br><br>
 
 		 <a id="partieune">
 				<img src="image_site/afficheHM.jpg" alt="" width="450" height="auto" />
 			</a> <br><br>
+			 <a id="partieune">
+				<img src="image_site/fusil à pompe.jpg" alt="" width="450" height="auto" />
+			</a> <br><br>
 		 <a id="partieune">
 				<img src="image_site/affiches2.jpg" alt="" width="450" height="auto" />
 			</a> <br><br>
 	
 		 <a id="partieune">
-				<img src="image_site/fusil à pompe.jpg" alt="" width="450" height="auto" />
+				<img src="image_site/tirailleurs sénégalais.jpg" alt="" width="450" height="auto" />
 			</a> <br><br>
 		 <a id="partieune">
 				<img src="image_site/criminalité.jpg" alt="" width="450" height="auto" />
