--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -197,7 +197,7 @@
 					<i><u>Contribution à la critique de La philosophie du droit de Hegel(.pdf)</u></a>
 					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="FeuerbachPdf">
 					<a id="GUERRE CIVILE" rel="" href="http://classiques.uqac.ca/classiques/Marx_karl/guerre_civile_france/guerre_civile_france.pdf">
-					<u><i>LA GUERRE CIVILE en France 1871 (La Commune de Paris), avec préface de Engels</i></u><span></a><br><br>
+					<u><i>LA GUERRE CIVILE en France 1871 (La Commune de Paris), avec préface de Engels</i></u><span></a><br>
 					<a id="1844" href="https://drive.google.com/uc?id=1PljVQdGf7oTgnSi5q0lEYw8p6yIfo-5Y" title="1844Pdf">
 					<i><u>Manuscrit de 1844(.pdf)</u></a>
 					<br><a href="https://drive.google.com/uc?id=1WX-UshxhGO8R5nCk6HWIYVIGL398QHnP" title="FeuerbachPdf">
