--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -287,7 +287,7 @@
 					<a id="une-femme-melancolique" rel="une-femme-melancolique" href="https://www.arte.tv/fr/videos/112991-000-A/une-femme-melancolique/">
 					<u><i>Une femme melancolique</i></u></span></p></a>
 				<p><span>INA,
-				<br><a id="INA" rel="INA" href="https://www.ina.fr/recherche?q=la-france-defiguree" >
+				<br><a id="INA" rel="INA" href="https://www.ina.fr/recherche?q=la%20france%20d%C3%A9figur%C3%A9e&espace=1&media=2&sort=pertinence&order=desc" >
 				<u><i>La France défigurée,</i> années 1970, documentaire</u></a></span>		
 				<br><a id="INA" rel="INA" href="https://www.ina.fr/ina-eclaire-actu/video/i11054366/michel-fugain-et-rene-barjavel" >
 				<u><i>Place des Fêtes en rénovation,</i> 1975, documentaire</u></p></a></span>					
