--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -339,13 +339,13 @@
 	    			<p><span>WATKINS,Peter,<br>	
 				<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70fzr">
 					   <i> <u>La Bombe, partie I</i></u><span></a><br>
-		              <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
-					    <i><u>La Bombe, partie III</i></u><span></a><br>
-		             <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
+		                <a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70g6q">
 					    <i><u>La Bombe, partie II</i></u><span></a><br>
+				<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70plg">
+					    <i><u>La Bombe, partie III</i></u><span></a><br>
 				<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
 					    <u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
-		              <a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
+		                <a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
 					   <i> <u>La Commune (Paris, 1871), partie II</i></u><span></a></p>
 															  
 					 
