--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -361,9 +361,14 @@
 					<br><a id="renoir" rel="renoir" href="https://www.youtube.com/watch?v=q7Mtd6GE_PI" >
 					<u><i>Jean Renoir parle de son art 1961</i></u></p></a></span>
 
+				<p><span>ROUCH, Jean,
+					<br><a id="Les Maitres fous" rel="Les Maitres fous" href="https://www.youtube.com/watch?v=9G9mlBlWNcY" >
+					<u><i>Les Maitres fous</i></u></p></a></span>
+
 				<p><span>RUSPOLI, Mario,
 					<br><a id="RUSPOLI" rel="RUSPOLI" href="https://www.youtube.com/watch?v=Gat9FUQkNYU" >
 					<u><i>Regard sur la folie et La Fête prisonnière</i></u></p></a></span>
+
 				
 				<p><span>STRIP TEASE <br>
 					<a id="Strip Tease" rel="Strip Tease" href="https://www.youtube.com/@StripTeaseTVFR/videos">
