--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -382,7 +382,7 @@
 					<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70plg">
 					<i><u>La Bombe, partie III</i></u><span></a><br>
 					<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
-					<u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
+					<i><u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
 		              		<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
 					<i> <u>La Commune (Paris, 1871), partie II</i></u><span></a></p>
 															  
@@ -432,6 +432,14 @@
 				<p><span>JAPPE, Anselm, 
 					<br><a id="anselm" rel="jappe" href="https://www.youtube.com/watch?v=zo5vdXkRPuc">
 					<u><i>Debord et la philosophie allemande</i></u></span></p></a>
+
+				<p><span>LAUMONIER, Fabienne, 
+					<br><a id="Folie blanche" rel="Folie blanche" href="https://www.arteradio.com/son/folie-blanche">
+					<u><i>Folie blanche</i></u></span></p></a>
+
+				<p><span>GITTON, Violette, 
+					<br><a id="malheur-niveau-2" rel="malheur-niveau-2" href="https://www.arteradio.com/son/malheur-niveau-2">
+					<u><i>Malheur niveau 2</i></u></span></p></a>
 
 		             
 			           </td>
