--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -415,7 +415,7 @@
 				<p><span>MATSUMOTO, Taiyou <br>
 					<a id="black-white" rel="black-white" href="https://xbato.com/title/3730-black-white" >
 					<span><u><i>Amer béton (lecture en ligne en anglais)</i></u></a><span>
-					<a id="SUNNY" rel="SUNNY" href="https://xbato.com/title/49027-sunny-matsumoto-taiyou" >
+					<br><a id="SUNNY" rel="SUNNY" href="https://xbato.com/title/49027-sunny-matsumoto-taiyou" >
 					<span><u><i>SUNNY (lecture en ligne en anglais)</i></u></a><span></p>
 						
 				<p><span>YOSHIHARU, Tsuge <br>
