--- a/plagiat_ed_mediatheque.html
+++ b/plagiat_ed_mediatheque.html
@@ -387,10 +387,9 @@
 					<i><u>La Bombe, partie II</i></u><span></a><br>
 					<a id="WATKINSbombe" rel="WATKINSbombe" href="https://www.dailymotion.com/video/x70plg">
 					<i><u>La Bombe, partie III</i></u><span></a><br>
-					<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=zg4Q0xtcFlg">
-					<i><u>La Commune (Paris, 1871), partie I</i></u><span></a><br>
-		              		<a id="WATKINSmovie" rel="WATKINSmovies" href="https://www.youtube.com/watch?v=9xavjkBujJE">
-					<i> <u>La Commune (Paris, 1871), partie II</i></u><span></a></p>
+					<a id="WATKINScommune" rel="WATKINScommune" href="https://www.youtube.com/watch?v=fDTTdWEYSAc">
+					<i><u>La Commune (Paris, 1871)</i></u><span></a><br>
+
 															  
 					 
 			           </td>
